--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,12 +5,21 @@ jobs:
     name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
+    # 1. Ambil kode terbaru dari repository
     - name: 🚚 Get latest code
       uses: actions/checkout@v4
-    
+
+    # 2. Instal dependencies dan buat build
+    - name: 🔧 Install dependencies and build
+      run: |
+        npm install
+        npm run build
+
+    # 3. Sinkronkan hanya isi folder `build` ke server FTP
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
         server: ${{ secrets.FTP_SERVER }}
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
+        local-dir: build
